--- a/CoursesApp/CoursesApp.csproj
+++ b/CoursesApp/CoursesApp.csproj
@@ -356,6 +356,8 @@
     <Content Include="ClientPanel\vendor\bootstrap\js\bootstrap.min.js.map" />
     <Content Include="ClientPanel\vendor\jquery\jquery.min.map" />
     <Content Include="ClientPanel\vendor\jquery\jquery.slim.min.map" />
+    <Content Include="Areas\Admin\Views\Account\Login.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_offlineLayout.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -367,8 +369,10 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\AccountController.cs" />
     <Compile Include="Areas\Admin\Controllers\CourseController.cs" />
     <Compile Include="Areas\Admin\Controllers\DefaultController.cs" />
+    <Compile Include="Areas\Admin\Models\LoginModel.cs" />
     <Compile Include="Areas\Instructor\Controllers\DefaultController.cs" />
     <Compile Include="Areas\Instructor\InstructorAreaRegistration.cs" />
     <Compile Include="Controllers\CourseController.cs" />
@@ -416,6 +420,7 @@
       <DependentUpon>CoursesModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AdminService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
